<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="kr.co.marketlink.fms.LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_main"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_loginplease"
            android:layout_marginBottom="30dp"/>

        <kr.co.marketlink.ui.MlInput
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_needid"
            android:inputType="text"
            android:id="@+id/mi_id"
            android:layout_marginBottom="10dp"/>

        <kr.co.marketlink.ui.MlInput
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_needpwd"
            android:inputType="textPassword"
            android:id="@+id/mi_pw"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorWarning"
            android:visibility="gone"
            android:id="@+id/tv_warning"/>

        <kr.co.marketlink.ui.MlButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"

            app:ml_text="@string/btn_login"
            app:ml_backgroundColor="@color/colorPrimary"
            app:ml_textColor="@android:color/white"
            android:id="@+id/btn_login"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_idpwdforget"
            android:layout_marginBottom="30dp"/>

    </LinearLayout>

</ScrollView>
