<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="8dp"
        android:id="@+id/ll_box"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:gravity="center"
            android:id="@+id/tv_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/tv_completeCnt"
            android:text="@string/desc_completeCnt"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <kr.co.marketlink.ui.MlButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ml_text="@string/btn_start"
                android:id="@+id/btn_start"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"/>

            <kr.co.marketlink.ui.MlButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ml_text="@string/btn_history"
                android:id="@+id/btn_history"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"/>

            <kr.co.marketlink.ui.MlButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ml_text="@string/btn_contactList"
                android:id="@+id/btn_contactList"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"/>

            <kr.co.marketlink.ui.MlButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ml_text="@string/btn_finalList"
                android:id="@+id/btn_completeList"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>