<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="kr.co.marketlink.fms.MainActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:id="@+id/tv_title"
        android:textColor="@color/colorPrimary"/>

    <kr.co.marketlink.ui.MlButton
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/btn_notconfirm_list"
        android:layout_marginTop="20dp"
        app:ml_text="@string/btn_notconfirm_list"/>

    <kr.co.marketlink.ui.MlButton
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/btn_confirm_list"
        android:layout_marginTop="20dp"
        app:ml_text="@string/btn_confirm_list"/>

    <kr.co.marketlink.ui.MlButton
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/btn_complete_list"
        android:layout_marginTop="20dp"
        app:ml_text="@string/btn_complete_list"/>

</LinearLayout>
